# voxceleron2-engine

./: CMakeLists.txt  README.md  build.bat  voxceleron2.sln  voxceleron2.vcxproj  voxceleron2.vcxproj.filters
Resources/Shaders/: # Shader Compiler.bat  Bloom Blur Fragment.spv  Bloom Blur Vertex.spv  Composition Fragment.frag  G-Buffer Vertex.spv  Lighting Fragment.spv  SSAO Fragment.frag  SSAO Fragment.spv
docs/: Logger-Architecture.md  Logger-Implementation-Summary.md  Logger-Usage-Guide.md
shaders/: Bloom Blur Vertex.vert  Composition Fragment.spv  G-Buffer Fragment.spv  Lighting Fragment Multisampled.frag  SSAO Blur Fragment.frag  SSAO Blur Fragment.spv  SSAO Fragment Multisampled.spv  Shadow Depth Vertex.spv  Shadow Depth Vertex.vert
src/Infinitus/: Chunk.hpp  Common.hpp  Main.cpp  World.cpp  World.hpp
src/Oreginum/: Camera.cpp  Core.cpp  Core.hpp  Keyboard.cpp  Logger.cpp  Logger.hpp  Main Renderer.cpp  Mouse.cpp  Renderer Core.cpp  Texture.cpp  Window.cpp
src/Tetra/: Main.cpp  Render Group.cpp  World.cpp
src/Vulkan/: Buffer.cpp  Command Buffer.cpp  Command Pool.cpp  Descriptor Pool.cpp  Descriptor Set.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  Render Pass.cpp  Sampler.cpp  Semaphore.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp
